<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Test Your Android</string>
    <string name="ui_okay">Okay</string>
    <string name="ui_cancel">Cancel</string>
    <string name="ui_error">Error</string>
    <string name="ui_success" translatable="false">Success</string>
    <string name="ui_na">Not Applicable</string>
    <string name="ui_caution">Caution</string>
    <string name="ui_not_support">Not supported</string>
    <string name="ui_not_support_android_version">Only support Android %1$s+</string>
    <string name="dialog_feature_na_message">Your Android device does not have this feature, or this feature may be using by other apps.</string>
    <string name="dialog_permission_denied_message">Without granting permissions, it will probably not work.\n\nPlease grant the permissions to access this feature.</string>
    <string name="dialog_permission_denied_posbtn">Settings</string>
    <string-array name="language_choose" translatable="false">
        <item>System Default</item>
        <item>Afrikaans</item>
        <item>Azərbaycan</item>
        <item>Bahasa indonesia</item>
        <item>Bahasa Melayu</item>
        <item>Bosanski</item>
        <item>Català</item>
        <item>Čeština</item>
        <item>Dansk</item>
        <item>Deutsch</item>
        <item>English</item>
        <item>Español</item>
        <item>Français</item>
        <item>Hrvatski</item>
        <item>Italiano</item>
        <item>Latviešu</item>
        <item>Lietùviškai</item>
        <item>Malti</item>
        <item>Nederlands</item>
        <item>Norsk</item>
        <item>O\'zbek</item>
        <item>Polski</item>
        <item>Português</item>
        <item>Pýсский</item>
        <item>Română</item>
        <item>Shqip</item>
        <item>Suomi</item>
        <item>Svenska</item>
        <item>Tagalog</item>
        <item>हिन्दी</item>
        <item>ภาษาไทย</item>
        <item>සිංහල</item>
        <item>한국어</item>
        <item>中文（正體）</item>
        <item>中文（香港）</item>
        <item>中文（简体）</item>
        <item>日本語</item>
    </string-array>
    <string-array name="language_locale_code" translatable="false">
        <item />
        <item>af</item>
        <item>az</item>
        <item>in</item>
        <item>ms</item>
        <item>bs</item>
        <item>ca</item>
        <item>cs</item>
        <item>da</item>
        <item>de</item>
        <item>en</item>
        <item>es</item>
        <item>fr</item>
        <item>hr</item>
        <item>it</item>
        <item>lv</item>
        <item>lt</item>
        <item>mt</item>
        <item>nl</item>
        <item>no</item>
        <item>uz</item>
        <item>pl</item>
        <item>pt</item>
        <item>ru</item>
        <item>ro</item>
        <item>sq</item>
        <item>fi</item>
        <item>sv</item>
        <item>tl</item>
        <item>hi</item>
        <item>th</item>
        <item>si</item>
        <item>ko</item>
        <item>zh</item>
        <item>zh</item>
        <item>zh</item>
        <item>ja</item>
    </string-array>
    <string-array name="language_locale_country_code" translatable="false">
        <item />
        <item>ZA</item>
        <item>AZ</item>
        <item>ID</item>
        <item>MY</item>
        <item>BA</item>
        <item>ES</item>
        <item>CZ</item>
        <item>DK</item>
        <item>DE</item>
        <item />
        <item>ES</item>
        <item>FI</item>
        <item>HR</item>
        <item>IT</item>
        <item>LV</item>
        <item>LT</item>
        <item>MT</item>
        <item>NL</item>
        <item>NO</item>
        <item>UZ</item>
        <item>PL</item>
        <item>PT</item>
        <item>RU</item>
        <item>RO</item>
        <item>AL</item>
        <item>FI</item>
        <item>SE</item>
        <item>PH</item>
        <item>IN</item>
        <item>TH</item>
        <item>LK</item>
        <item>KR</item>
        <item>TW</item>
        <item>HK</item>
        <item>CN</item>
        <item>JP</item>
    </string-array>
    <string name="title_activity_screen">Monitor Color</string>
    <string name="title_activity_light">Light Sensor</string>
    <string name="title_activity_humidity">Humidity Sensor</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_qr_scanner">Barcode/QR Code Scanner</string>
    <string name="title_activity_bubble_level">Bubble level</string>
    <string name="title_activity_sound_meter">Sound Meter</string>
    <string name="title_activity_speed_test">Speed Test</string>
    <string name="title_activity_flashlight">Flashlight</string>
    <string name="title_activity_biometric">Fingerprint</string>
    <string name="title_activity_drawing">Touch Screen</string>
    <string name="title_activity_touch">Multi Touch</string>
    <string name="title_activity_speaker">Speaker and Vibrate</string>
    <string name="title_activity_microphone">Microphone</string>
    <string name="title_activity_wifi">Wi-Fi</string>
    <string name="title_activity_wifi_strength" tools:ignore="MissingTranslation">Wi-Fi Strength</string>
    <string name="title_activity_bluetooth">Bluetooth</string>
    <string name="title_activity_accelerometer">Accelerometer</string>
    <string name="title_activity_step">Pedometer</string>
    <string name="title_activity_temperature">Temperature Sensor</string>
    <string name="title_activity_location">Location</string>
    <string name="title_activity_nfc">NFC</string>
    <string name="title_activity_proximity">Proximity Sensor</string>
    <string name="title_activity_gravity">Gravity Sensor</string>
    <string name="title_activity_pressure">Pressure Sensor</string>
    <string name="title_activity_system_monitor">System Monitor</string>
    <string name="title_activity_compass">Compass</string>
    <string name="title_activity_device">Hardware</string>
    <string name="title_activity_cpu">CPU/Memory</string>
    <string name="title_activity_open_gl" translatable="false">OpenGL</string>
    <string name="title_activity_android_version">Android Version</string>
    <string name="title_activity_application">Installed Apps</string>
    <string name="title_activity_battery">Battery</string>
    <string name="title_activity_gsm">Network</string>
    <string name="title_activity_test_ad_remover">Donate</string>
    <string name="title_activity_app_brain">More App</string>
    <string name="title_activity_rate_us">Rate us!</string>
    <string name="title_activity_language">Language</string>
    <string name="title_activity_app_choose">Installed Apps</string>
    <string name="title_activity_app_user">User Installed Apps</string>
    <string name="title_activity_app_system">System Apps</string>
    <string name="title_activity_app_all">All Apps</string>
    <string name="app_package">Application Package</string>
    <string-array name="tools_string_array" translatable="false">
        <item>@string/title_activity_qr_scanner</item>
        <item>@string/title_activity_flashlight</item>
        <item>@string/title_activity_bubble_level</item>
        <item>@string/title_activity_sound_meter</item>
        <item>@string/title_activity_speed_test</item>
    </string-array>
    <string-array name="hardware_string_array" translatable="false">
        <item>@string/title_activity_screen</item>
        <item>@string/title_activity_drawing</item>
        <item>@string/title_activity_touch</item>
        <item>@string/title_activity_camera</item>
        <item>@string/title_activity_speaker</item>
        <item>@string/title_activity_microphone</item>
        <item>@string/title_activity_nfc</item>
        <item>@string/title_activity_location</item>
        <item>@string/title_activity_biometric</item>
    </string-array>
    <string-array name="sensor_string_array" translatable="false">
        <item>@string/title_activity_step</item>
        <item>@string/title_activity_temperature</item>
        <item>@string/title_activity_compass</item>
        <item>@string/title_activity_light</item>
        <item>@string/title_activity_accelerometer</item>
        <item>@string/title_activity_proximity</item>
        <item>@string/title_activity_pressure</item>
        <item>@string/title_activity_gravity</item>
        <item>@string/title_activity_humidity</item>
    </string-array>
    <string-array name="info_string_array" translatable="false">
        <item>@string/title_activity_system_monitor</item>
        <item>@string/title_activity_wifi</item>
        <item>@string/title_activity_bluetooth</item>
        <item>@string/title_activity_cpu</item>
        <item>@string/title_activity_open_gl</item>
        <item>@string/title_activity_device</item>
        <item>@string/title_activity_android_version</item>
        <item>@string/title_activity_battery</item>
        <item>@string/title_activity_camera</item>
        <item>@string/title_activity_gsm</item>
        <item>@string/title_activity_application</item>
    </string-array>
    <string-array name="other_string_array" translatable="false">
        <item>@string/title_activity_rate_us</item>
        <item>@string/title_activity_language</item>
        <item>@string/title_activity_test_ad_remover</item>
        <item>@string/title_activity_app_brain</item>
    </string-array>
    <string-array name="app_choose_string_array" translatable="false">
        <item>@string/title_activity_app_user</item>
        <item>@string/title_activity_app_system</item>
        <item>@string/title_activity_app_all</item>
    </string-array>
    <string name="main_title_tools">Utilities &amp; Tools</string>
    <string name="main_title_hardware">Hardware Testing</string>
    <string name="main_title_sensor">Sensor Testing</string>
    <string name="main_title_information">Device Information</string>
    <string name="main_title_other">Other</string>
    <string name="main_tab_title_1">Device Test</string>
    <string name="main_tab_title_2">About</string>
    <string-array name="main_tab_title" translatable="false">
        <item>@string/main_tab_title_1</item>
        <item>@string/main_tab_title_2</item>
    </string-array>
    <string name="app_info_tab_title_1">Actions</string>
    <string name="app_info_tab_title_2">Package</string>
    <string name="app_info_tab_title_3">Permissions</string>
    <string-array name="app_info_tab_title" translatable="false">
        <item>@string/app_info_tab_title_1</item>
        <item>@string/app_info_tab_title_2</item>
        <item>@string/app_info_tab_title_3</item>
    </string-array>
    <string name="test_monitor_tab_title_1">CPU</string>
    <string name="test_monitor_tab_title_2">Network</string>
    <string name="test_monitor_tab_title_3">Memory</string>
    <string name="vibrate_button">Test Vibration</string>
    <string name="ring_button">Play Music</string>
    <string name="adjust_volume">Adjust the Volume</string>
    <string name="vibrate_type">Vibration Mode</string>
    <string name="ui_share">Share</string>
    <string name="cpu_speed">Speed</string>
    <string name="cpu_core">No. of Core</string>
    <string name="cpu_min">Min Speed</string>
    <string name="cpu_max">Max Speed</string>
    <string name="memory_ava">Available</string>
    <string name="memory_total">Total</string>
    <string name="memory_used">Used</string>
    <string name="ui_version">Version</string>
    <string name="pref_feedback">Give me Feedback</string>
    <string name="pref_restore_purchase" translatable="false">Restore purchase</string>
    <string name="pref_credit">Open source licenses</string>
    <string name="pref_more_app">Developer\'s app</string>
    <string name="rate_title">Did you like the app?</string>
    <string name="rate_netbtn">Later on</string>
    <string name="rate_posbtn">Rate now</string>
</resources>