<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/border"
            style="@style/Border"
            app:layout_constraintBottom_toTopOf="@id/vibrateTitleTv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ringButton" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/vibrateSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@id/vibrateButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vibrateTitleTv" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/vibrateTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vibrate_type"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintBottom_toTopOf="@id/vibrateSpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/border" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ringTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adjust_volume"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintBottom_toTopOf="@id/ringButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ringButton"
            style="@style/MainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ring_button"
            app:layout_constraintBottom_toTopOf="@id/border"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ringTitleTv" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/vibrateButton"
            style="@style/GreenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vibrate_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vibrateSpinner" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>