<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:textColor="@color/primaryText"
            android:text="@string/rate_title"
            android:textSize="28sp" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:max="5"
            android:numStars="5"
            android:stepSize="1"
            android:rating="5"
            android:theme="@style/RatingBar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/skipBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_netbtn"
                style="@style/BorderlessButton" />

            <Space
                android:layout_width="12dp"
                android:layout_height="match_parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submitBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_posbtn"
                style="@style/MainButton" />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>