<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.fragment.MonitorCpuFragment">

    <LinearLayout
        android:id="@+id/graph2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:orientation="vertical">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <View
                android:id="@+id/view1"
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:background="#33B5E5"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:orientation="vertical">

                <com.devspark.robototextview.widget.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cpu_speed"
                    app:robotoFontFamily="roboto"/>

                <com.devspark.robototextview.widget.RobotoTextView
                    android:id="@+id/speedText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    app:robotoFontFamily="roboto"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="12dp"
                android:orientation="vertical">

                <com.devspark.robototextview.widget.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cpu_core"
                    app:robotoFontFamily="roboto"/>

                <com.devspark.robototextview.widget.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cpu_max"
                    app:robotoFontFamily="roboto"/>

                <com.devspark.robototextview.widget.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cpu_min"
                    app:robotoFontFamily="roboto"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.devspark.robototextview.widget.RobotoTextView
                    android:id="@+id/coreText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    app:robotoFontFamily="roboto"/>

                <com.devspark.robototextview.widget.RobotoTextView
                    android:id="@+id/maxText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    app:robotoFontFamily="roboto"/>

                <com.devspark.robototextview.widget.RobotoTextView
                    android:id="@+id/minText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    app:robotoFontFamily="roboto"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>